--- a/golf/trunk/WebRoot/WEB-INF/web.xml
+++ b/golf/trunk/WebRoot/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 		<filter-class>com.propn.golf.mvc.GolfFilter</filter-class>
 		<init-param>
 			<param-name>packages</param-name>
-			<param-value>com.propn.mvc</param-value>
+			<param-value>com.propn.golf.mvc</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
