--- a/golf/trunk/WebRoot/WEB-INF/web.xml
+++ b/golf/trunk/WebRoot/WEB-INF/web.xml
@@ -7,21 +7,17 @@
 
 	<filter>
 		<filter-name>golf</filter-name>
-		<filter-class>com.propn.golf.mvc.GolfFilter</filter-class>
-		<init-param>
-			<param-name>packages</param-name>
-			<param-value>com.propn.golf.mvc</param-value>
-		</init-param>
+		<filter-class>com.propn.golf.mvc.Golf</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>golf</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
-	
+
 </web-app>
